@@ -296,6 +296,7 @@ d0f4e6dae869eef0718d45cd1d1098bd8d846377 jedit-20250824.tar.gz
 fe8ccc83b2efc2f7cb4a6801467571a88b1aa2fa jedit-20250825.tar.gz
 4303b881d0d4e9a3c1d62683a737da079e0ead32 jedit-20251118.tar.gz
 49b2ece0ebbfb5df8abdab6ff81e7c2d46bd6450 jedit-20251128.tar.gz
+deff310505559ea6c1005e8ad3408e95a1b462b7 jedit-20260123.tar.gz
 44775a22f42a9d665696bfb49e53c79371c394b0 jedit_build-20111217.tar.gz
 a242a688810f2bccf24587b0062ce8027bf77fa2 jedit_build-20120304.tar.gz
 4c948dee53f74361c097c08f49a1a5ff9b17bd1d jedit_build-20120307.tar.gz
