@@ -15,7 +15,7 @@ isabelle_fonts-20241227
 isabelle_setup-20250613
 javamail-20251022
 jdk-21.0.9
-jedit-20251128
+jedit-20260123
 jfreechart-1.5.3
 jortho-1.0-2
 jsoup-1.21.2
